added event searching functionality
